# docs/swagger.json
@@ -435,6 +435,82 @@
                     }
                 }
             }
+        },
+        "/users/activated": {
+            "put": {
+                "description": "activate the account of a user using the given token",
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Activate user account",
+                "parameters": [
+                    {
+                        "description": "activate user",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.ActivateUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/commons.ResponseObject"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.SingleUserResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "e.g. status: error, message: the error reason",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
+                    "409": {
+                        "description": "e.g. status: error, message: unable to update the record due to an edit conflict, please try again",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
+                    "422": {
+                        "description": "status: fail",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/commons.ResponseObject"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.ValidationError"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "e.g. status: error, message: the error reason",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -468,6 +544,14 @@
                 },
                 "total_records": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.ActivateUserRequest": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
                 }
             }
         },
@@ -571,6 +655,9 @@
         "dto.UserResponse": {
             "type": "object",
             "properties": {
+                "activated": {
+                    "type": "boolean"
+                },
                 "created_at": {
                     "type": "string"
                 },
