# infrastructures/dto/users.go
@@ -16,10 +16,15 @@ type SingleUserResponse struct {
 	User UserResponse `json:"user"`
 }
 
+type ActivateUserRequest struct {
+	TokenPlaintext string `json:"token"`
+}
+
 type UserResponse struct {
 	ID        custom_type.ID `json:"id"`
 	Name      string         `json:"name"`
 	Email     string         `json:"email"`
+	Activated bool           `json:"activated"`
 	CreatedAt time.Time      `json:"created_at"`
 	Version   int            `json:"version"`
 }
